--- a/bank_app/templates/bank_app/index.html
+++ b/bank_app/templates/bank_app/index.html
@@ -235,7 +235,7 @@
 						<select name="card_pk">
 							<option disabled selected value> -- select an option -- </option>
 							{% for c in cards %}									
-								<option value="{{ c.pk }}">{{ c.cardNumber }} ({{ c.currency }})</option>
+								<option value="{{ c.pk }}">{{ c.cardNumber }} ({{ c.account.currency.type }})</option>
 							{% endfor %}
 						</select>
 					</div>
@@ -281,7 +281,7 @@
 								<td rowspan="2">{{ forloop.counter }}</td>
 								<td>{{ c.account }}</td>
 								<td>{{ c.cardNumber }}</td>
-								<td>{{ c.initialBalance|intcomma }} {{ c.currency }}</td>
+								<td>{{ c.initialBalance|intcomma }} {{ c.account.currency }}</td>
 								<td>{{ c.expiryDate }}</td>
 								<td>
 									{% for b in card_repay_balances %}
@@ -298,7 +298,7 @@
 						<td colspan="5" id="repay">
 							{% for b in card_repay_balances %}
 								{% if b.0 == c.pk %}
-									{% if b.1 != '0.00' %}
+									{% if b.1 != 0.00 %}
 										<div>
 											<div class="form_item_wrapper">
 												<label>From account</label>
