--- a/bank_app/templates/bank_app/index.html
+++ b/bank_app/templates/bank_app/index.html
@@ -97,6 +97,39 @@
 				{% endfor %}
 				</table>
 			</section>
+
+			<section id="currency_rate">
+				<h3>Manage currrency rate</h3>
+				<form method="post">
+					{% csrf_token %}
+					
+					<div class="form_item_wrapper">
+						<label>From</label>
+						<select name="from_currency" id="from_currency" onchange="curenncyChange()">
+							<option disabled selected value> -- select an option -- </option>
+							{% for c in currencies %}								
+								<option value="{{ c.type }}">{{ c.name }}</option>
+							{% endfor %}
+						</select>
+					</div>
+					<div class="form_item_wrapper">
+						<label>To</label>
+						<select name="to_currency" id="to_currency" onchange="curenncyChange()">
+							<option disabled selected value> -- select an option -- </option>
+							{% for c in currencies %}								
+								<option value="{{ c.type }}">{{ c.name }}</option>
+							{% endfor %}
+						</select>
+					</div>
+					
+					<div class="form_item_wrapper">
+						<label>Rate</label>
+						<input type="number" name="rate" id="rate" step=".01" placeholder="Choose currency" required />
+					</div>
+					
+					<button class="btn" onclick="updateRate()">Update rate</button>
+				</form>
+			</section>
 		</main>
 		{% else %}
 
