--- a/bank_app/templates/bank_app/index.html
+++ b/bank_app/templates/bank_app/index.html
@@ -17,7 +17,14 @@
 	<body>
 	{% if request.user.is_authenticated %}
 	<header>
-		<h1>Bank app</h1>
+		<div>
+			<h1>Bank app</h1>
+			{% if is_error == True and message != '' %}
+				<p class="red_text">{{ message }}</p>
+			{% elif is_error == False and messsage != '' %}				
+				<p class="green_text">{{ message }}</p>
+			{% endif %}
+		</div>
 		<section>
 			<div>
 				<h2>Welcome, {{ request.user.username }}!</h2>
