--- a/bank_app/templates/bank_app/index.html
+++ b/bank_app/templates/bank_app/index.html
@@ -164,7 +164,7 @@
 					</div>
 					<div class="form_item_wrapper">
 						<label>Amount</label>
-						<input type="number" name="amount" placeholder="Amount to transfer" step=".01">
+						<input type="number" name="amount" placeholder="Amount to transfer ('From account' currency)" step=".01">
 					</div>
 					<div class="form_item_wrapper">
 						<label>Description</label>
