Change ratio url

--- a/login_app/templates/login_app/login.html
+++ b/login_app/templates/login_app/login.html
@@ -23,7 +23,7 @@
 					<div class="form_item_wrapper">
 						<p>We've sent a verification code to your number</p>
 						<label>SMS code</label>
-						<input type="number" name="code" placeholder="Type your SMS code" />
+						<input type="number" name="code" placeholder="Type your SMS code" required />
 						<input type="hidden" name="codepk" value="{{ code.pk }}" />
 					</div>
 					<button formaction="{% url 'login_app:login_verify' %}" class="btn">Login</button>
@@ -32,7 +32,7 @@
 						<p>Scan the QR code</p>
 						<img id='qrcode' src="{% static 'media/qr.png' %}" alt="qrcode" />
 						<label>Secret code</label>
-						<input type="number" name="code" placeholder="Type your secret code here" />
+						<input type="number" name="code" placeholder="Type your secret code here" required />
 						<input type="hidden" name="codepk" value="{{ code.pk }}" />
 					</div>
 					<button formaction="{% url 'login_app:login_verify' %}" class="btn">Login</button>
